# qomni-crystal-paper

./: README.md
arxiv/: main.tex
code/: README.md  colab_crystal_hidraulica.ipynb  crystal_pack.py  crystal_synth_hidraulica.py
crys-l/: LANGUAGE_GUIDE.md  SPEC.md
crys-l/compiler/: Cargo.toml
crys-l/compiler/src/: ast.rs  crystal_compiler.rs  lexer.rs  lib.rs  main.rs  parser.rs  repl.rs  server.rs  typeck.rs  vm.rs
crys-l/examples/: hidraulica.crys  multi_domain.crys  ternary_types.crys
datasets/: contabilidad_data.jsonl  general_data.jsonl  inmobiliaria_data.jsonl  legal_peru_data.jsonl  nfpa_electrico_data.jsonl  tecnico_it_data.jsonl  whatsapp_ventas_data.jsonl
notebooks/: colab_contabilidad.ipynb  colab_general.ipynb  colab_inmobiliaria.ipynb  colab_legal_peru.ipynb  colab_nfpa_electrico.ipynb  colab_tecnico_it.ipynb  colab_whatsapp_ventas.ipynb
qomn/: LANGUAGE_GUIDE.md  SPEC.md
qomn/compiler/: Cargo.toml
qomn/compiler/src/: ast.rs  crystal_compiler.rs  lexer.rs  lib.rs  main.rs  parser.rs  repl.rs  server.rs  typeck.rs  vm.rs
qomn/examples/: hidraulica.qomn  multi_domain.qomn  ternary_types.qomn
results/: benchmark_server5.json  crystal_hidraulica_stats.json  physics_oracle_comparison.json
