[package]
name    = "qomn"
version = "0.1.0"
edition = "2021"
description = "QOMN compiler — QOMN Language for ternary AI inference"
authors = ["Percy Rojas Masgo <percy@condesi.pe>"]
license = "Apache-2.0"

[[bin]]
name = "qomn"
path = "src/main.rs"

[lib]
name = "qomn_lib"
path = "src/lib.rs"

[dependencies]
# no external deps — pure Rust stdlib for portability
